--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "iostream": "cpp",
         "array": "cpp",
         "regex": "cpp"
-    }
+    },
+    "python.analysis.typeCheckingMode": "off"
 }
